// Wiregost - Golang Exploitation Framework
// Copyright Â© 2020 Para
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU General Public License for more details.
//
// You should have received a copy of the GNU General Public License
// along with this program.  If not, see <http://www.gnu.org/licenses/>.

syntax = "proto3";

package ghostpb;

// [ Base ] ------------------------------------------------------------------//

message Envelope {
        uint32 Type = 1;
        uint64 ID = 2;          // Message Type
        int64 Timeout = 3;      // Response ID

        bytes Data = 9;         // Message Data

        string Err = 4;
}

message Register {
        string Name = 1;
        string Hostname = 2;
        string Username = 3;
        string Uid = 4;
        string Gid = 5;
        string Os = 6;
        string Arch = 7;
        string Pid = 8;
        string Filename = 9;
        string ActiveC2 = 10;
        string Version = 11;
}

message Ping { int32 Nonce = 1; }

message KillReq {
        bool Force = 1;
        uint32 GhostID = 9;
}

// Shellcode task
message Task {
        string Encoder = 2;
        bool RWXPages = 4;
        uint32 Pid = 3;
        bytes Data = 9;
}

message RemoteTask {
        string Encoder = 2;
        uint32 Pid = 3;
        bool RWXPages = 4;
        bytes Data = 9;
}

// [ Protocol-specific ] ---------------------------------------------------------//

// DNS
message DNSSessionInit { bytes Key = 1; }

message DNSPoll { repeated DNSBlockHeader blocks = 1; }

message DNSBlockHeader {
        string ID = 1;
        uint32 Size = 2;
}

// HTTP
message HTTPSessionInit { bytes Key = 1; }

// Tunnels, shells, and port fwds
message TunnelData {
        uint32 GhostID = 1;

        bytes Data = 2;
        bool Close = 3;
        string Err = 4;

        uint64 TunnelID = 9;
}

message TunnelClose {
        string Err = 1;
        uint64 TunnelID = 9;
}

// Shell messages
message ShellReq {
        uint32 GhostID = 1;
        string Path = 2;
        bool EnablePTY = 3;

        uint64 TunnelID = 9;
}

message Shell {
        bool Success = 1;
        string Err = 2;

        uint64 TunnelID = 9;
}

// [ Routing / Pivoting ] --------------------------------------------------------//

message RouteReq {
        string Type = 1;            // Proxy might only support some protocols
        optional string LHost = 2;  // If we want to specify proxy listener options
        optional int32 LPort = 3;   // Same here

        string Subnet = 4;
        optional string Mask = 5;
        
        uint32 GhostID = 9; 
}

message Route {
        bool Success = 1;
        string Err = 3;
}

message PivotReq {
        string Type = 1;
        string LHost = 2;
        int32 LPort = 3;

        uint32 GhostID = 9;
}

message Pivot {
        bool Success = 1;
        string Err = 3;
}

// [ Commands ] ------------------------------------------------------------------//

message PsReq { uint32 GhostID = 9; }

message Ps { repeated Process Processes = 1; }

message Process {
        int32 Pid = 1;
        int32 Ppid = 2;
        string Executable = 3;
        string Owner = 4;
}

message TerminateReq {
        int32 Pid = 1;
        uint32 GhostID = 2;
}

message Terminate {
        string Err = 1;
}

message NetInterface {
        int32 Index = 1;
        string Name = 2;
        string MAC = 3;
        repeated string IPAddress = 4;
}

message IfConfigReq { uint32 GhostID = 1; }

message IfConfig { repeated NetInterface NetInterfaces = 1; }

message LsReq {
        string Path = 1;

        uint32 SliverID = 9;
}

message Ls {
        string Path = 1;
        bool Exists = 2;
        repeated FileInfo Files = 3;
}

message FileInfo {
        string Name = 1;
        bool IsDir = 2;
        int64 Size = 3;
}

message PwdReq { uint32 GhostID = 9; }

message Pwd {
        string Path = 1;
        string Err = 2;
}

message CdReq {
        string Path = 1;
        uint32 GhostID = 9;
}

message RmReq {
        string Path = 1;
        uint32 GhostID = 9;
}

message Rm {
        bool Success = 1;
        string Path = 2;
        string Err = 3;
}

message MkdirReq {
        string Path = 1;
        uint32 GhostID = 9;
}

message Mkdir {
        bool Success = 1;
        string Path = 2;
        string Err = 3;
}

message DownloadReq {
        string Path = 1;
        uint32 GhostID = 9;
}

message Download {
        string Path = 1;
        string Encoder = 2;
        bool Exists = 3;

        bytes Data = 9;
}

message UploadReq {
        string Path = 1;
        string Encoder = 2;
        bytes Data = 9;
        uint32 GhostID = 9;
}

message Upload {
        string Path = 1;
        string Encoder = 2;
        bool Success = 3;
}

message ProcessDumpReq {
        int32 Pid = 1;

        int32 Timeout = 8;
        uint32 GhostID = 9;
}

message ProcessDump {
        bytes Data = 1;
        string Err = 2;
}

message RunAsReq {
        string Username = 1;
        string Process = 2;
        string Args = 3;
        uint32 GhostID = 9;
}

message RunAs {
        string Output = 1;
        string Err = 2;
}

message ImpersonateReq {
        string Username = 1;
        uint32 GhostID = 9;
}

message Impersonate {
        string Err = 1;
}

message RevToSelfReq {
        uint32 GhostID = 9;
}

message RevToSelf {
        string Err = 1;
}

message GetSystemReq {
        bytes Data = 1;
        string HostingProcess = 2;
        uint32 GhostID = 9;
}

message GetSystem { string Output = 1; }

message ElevateReq {
        int32 Timeout = 8;
        uint32 GhostID = 9;
}

message Elevate {
        bool Success = 1;
        string Err = 2;
}

message ExecuteAssemblyReq {
        bytes HostingDll = 1;
        bytes Assembly = 2;
        string Arguments = 3;
        string Process = 4;
        int32 Timeout = 8;
        uint32 GhostID = 9;
}

message ExecuteAssembly {
        string output = 1;
        string error = 2;
}

message MigrateReq {
        uint32 Pid = 1;
        bytes Shellcode = 2;
        uint32 GhostID = 9;
}

message Migrate {
        bool Success = 1;
        string Err = 2;
}

message ExecuteReq {
        string Path = 1;
        repeated string Args = 2;
        bool output = 3;
        uint32 GhostID = 9;
}

message Execute {
        string Error = 1;
        string Result = 2;
}

message SideloadReq {
        bytes Data = 1;
        string ProcName = 2;
        uint32 GhostID = 9;
}

message Sideload {
        string Error = 1;
        string Result = 2;
}

message SpawnDllReq {
        bytes Data = 1;
        string ProcName = 2;
        uint32 Offset = 3;
        string Args = 4;
        uint32 GhostID = 9;
}

message SpawnDll {
        string Error = 1;
        string Result = 2;
}

